welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:3: error: '(' expected but identifier found.
while !sortie {
      ^Poucet:18: error: illegal start of simple expression
	}
        ^